--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/CreateTransportUnitDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/dialogs/CreateTransportUnitDialog.mxml
@@ -88,6 +88,10 @@
 	               closeDialog(event);
 	               return;
 	            }
+	            if(event.keyCode == Keyboard.ENTER)
+                {
+                	createTransportUnit();
+                }
 	        }
     	]]>
     </mx:Script>
