--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/CreateTransportOrderDialog.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/dialogs/CreateTransportOrderDialog.mxml
@@ -30,6 +30,7 @@
 
     <mx:Script>
     	<![CDATA[
+    		import org.openwms.web.flex.client.common.model.CommonModelLocator;
     		import org.openwms.tms.domain.order.TransportOrder$TRANSPORT_ORDER_STATE;
     		import org.openwms.common.domain.values.Barcode;
     		import org.openwms.common.domain.TransportUnit;
@@ -122,13 +123,13 @@
 
 	<mx:Canvas width="100%" height="100%">
 		<mx:Label x="10" y="10" text="Transport Unit" fontSize="24"/>
-		<comp:SuggestComboBox id="barcodeTxt" x="195" y="10" selectedIndex="-1" width="259" fontSize="24" labelField="barcode" dataProvider="{modelLocator.allTransportUnits}"/>
+		<comp:SuggestComboBox id="barcodeTxt" x="195" y="10" selectedIndex="-1" width="259" fontSize="24" labelField="barcode" dataProvider="{commonModelLocator.allTransportUnits}"/>
         <mx:Label x="9" y="80" text="Priority" fontSize="24"/>
 		<mx:Canvas x="9" y="151" width="445" height="229" backgroundColor="#F1F07C">
 			<mx:CheckBox id="targetLocationGroupChk" x="10" y="10" label="Target Location Group" selected="true" fontSize="24" />
-			<comp:SuggestComboBox id="targetLocationGroupCmb" x="53" y="57" selectedIndex="-1" fontSize="24" width="382" labelField="name" dataProvider="{modelLocator.allLocationGroups}" enabled="{targetLocationGroupChk.selected}" />
+			<comp:SuggestComboBox id="targetLocationGroupCmb" x="53" y="57" selectedIndex="-1" fontSize="24" width="382" labelField="name" dataProvider="{commonModelLocator.allLocationGroups}" enabled="{targetLocationGroupChk.selected}" />
 			<mx:CheckBox id="targetLocationChk" x="10" y="104" label="Target Location" selected="false" fontSize="24" />
-            <comp:SuggestComboBox id="targetLocationCmb" x="53" y="151" selectedIndex="-1" enabled="{targetLocationChk.selected}" labelField="" width="382" dataProvider="{modelLocator.allLocations}"/>
+            <comp:SuggestComboBox id="targetLocationCmb" x="53" y="151" selectedIndex="-1" enabled="{targetLocationChk.selected}" labelField="" width="382" dataProvider="{commonModelLocator.allLocations}"/>
 		</mx:Canvas>
 		<mx:Button id="createBtn" x="10" y="388" label="Create" fontSize="12" click="createTransportOrder()"/>
 		<mx:Button id="cancelBtn" x="384" y="388" label="Cancel" fontSize="12" click="closeDialog(event)"/>
