Moved event types to lib project, removed cairngorm from the project
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@895 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -40,8 +40,8 @@
                         <menuitem label="Transport Unit Types" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNITTYPE_VIEW}" />
                         <menuitem label="Transport Units" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
                         <menuitem label="Location Types" action="{CommonSwitchScreenEvent.SHOW_LOCATIONTYPE_VIEW}" />
-                        <menuitem label="Locations" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
-                        <menuitem label="Location Groups" action="{SwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
+                        <menuitem label="Locations" action="{CommonSwitchScreenEvent.SHOW_LOCATION_VIEW}" />
+                        <menuitem label="Location Groups" action="{CommonSwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
                     </menuitem>
                 </mx:XMLList>
             </mx:MenuBar>
