--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
@@ -30,7 +30,6 @@
 			import org.openwms.web.flex.client.model.ModelLocator;
 			import org.openwms.web.flex.client.util.DisplayUtility;
 			import org.openwms.web.flex.client.tms.event.TMSSwitchScreenEvent;
-
 		]]>
 	</mx:Script>
 
@@ -38,7 +37,7 @@
 		<mx:Canvas width="100%" height="25" backgroundSize="100%">
 			<mx:MenuBar id="tmsMenuBar" labelField="@label">
 				<mx:XMLList>
-					<menuitem label="Transport Order Management">
+					<menuitem label="Transport Management">
 						<menuitem label="Transport Orders" enabled="true" action="{TMSSwitchScreenEvent.SHOW_TRANSPORT_ORDERS_VIEW}"/>
 					</menuitem>
 				</mx:XMLList>
